# CryptoNote-App

./: .gitignore  Jenkinsfile  LICENSE  README.md  com.cryptonote.app.json  docker-compose.yml  install_nmh.sh  package-lock.json  package.json  render.yaml
.github/workflows/: release.yml
CryptoNote-App/: package-lock.json  package.json
CryptoNote-App/server/: .env.example  package.json
CryptoNote-App/server/src/middleware/: rateLimiter.ts
CryptoNote-App/src-ui/: tsconfig.json
CryptoNote-App/src-ui/src/components/: SecurityAlert.tsx
CryptoNote-App/src-ui/src/hooks/: useVault.ts
CryptoNote-App/src-ui/src/lib/: browserCrypto.ts  env.ts
CryptoNote-App/src-ui/src/pages/: Setup.tsx
CryptoNote-App/terraform/: eks.tf  variables.tf
browser-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
k8s/: frontend-deployment.yaml  frontend-service.yaml  mongodb-statefulset.yaml  namespace.yaml  secrets.yaml.template  server-deployment.yaml  server-service.yaml
k8s/monitoring/: install-monitoring.sh
scripts/: force_push_linux_vault.py
server/: .env.example  Dockerfile  jest.config.ts  package-lock.json  package.json  server-auth.js  server-minimal.js  server.js  tsconfig.json
server/config/: security.js
server/middleware/: auth.js
server/models/: Category.js  Password.js  User.js
server/routes/: admin.js  auth.js  categories.js  passwords.js
server/scripts/: security-check.js
server/services/: anomalyDetection.js  auditService.js  authService.js  emailService.js  encryptionService.js  rbacService.js
server/src/: index.ts
server/src/middleware/: replayProtection.ts
server/src/models/: User.ts  VaultBlob.ts
server/src/routes/: auth.ts  device.ts  vault.ts
server/src/tests/: auth.test.ts
server/utils/: passwordValidator.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-template/: AndroidManifest.xml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: commands.rs  lib.rs  main.rs  native_messaging_server.rs  tray_test.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/os_security/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/vault/: mod.rs
src-ui/: Dockerfile  index.html  vite.config.ts
src-ui/src/: App.tsx  index.css  main.tsx
src-ui/src/components/: PasswordGenerator.tsx  PasswordHealth.tsx  SyncStatus.tsx  TOTPDisplay.tsx
src-ui/src/hooks/: useVault.ts
src-ui/src/lib/: browserVault.ts  importExport.ts  passwordHealth.ts
src-ui/src/pages/: ItemDetail.tsx  Settings.tsx  Setup.tsx  Unlock.tsx  Vault.tsx
src-ui/src/store/: vaultStore.ts
src-ui/src/types/: vault.ts
terraform/: main.tf  outputs.tf
