[package]
name = "cryptonote"
version = "0.1.0"
edition = "2021"
description = "CryptoNote – Offline-First Zero-Knowledge Password Manager"
authors = ["CryptoNote Team"]

[lib]
name = "cryptonote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cryptonote"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"

# Cryptography
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12"
zeroize = { version = "1.8", features = ["derive"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / Sync
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Utilities
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs-next = "2"

[features]
# Enable when building for production
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
