[package]
name = "cryptonote"
version = "0.1.0"
edition = "2021"
description = "CryptoNote – Offline-First Zero-Knowledge Password Manager"
authors = ["CryptoNote Team"]

[lib]
name = "cryptonote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cryptonote"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["image-png"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"

# Cryptography
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
getrandom = "0.2"
hmac = "0.12"
zeroize = { version = "1.8", features = ["derive"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / Sync
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "time"] }

# Utilities
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs-next = "2"
tauri-plugin-fs = "2.5.1"

# Mobile-only: biometric auth (fingerprint / face unlock)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri = { version = "2.0", features = ["tray-icon", "image-ico"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[features]
# Enable when building for production
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Desktop release: balanced optimization
opt-level = 3
lto = "thin"          # thin LTO: safe on all platforms, ~same size benefit
codegen-units = 4    # 1 causes crashes on some Android NDK versions
debug = false

# Android uses this profile via Tauri's Gradle integration
# lto=false: fat LTO miscompiles on ARM64 cross-compilation with NDK 27+
# opt-level=s: size-optimized but safe (z is too aggressive for crypto code)
[profile.release-android]
inherits = "release"
opt-level = "s"
lto = false            # NO LTO for Android — prevents NDK miscompilation
codegen-units = 16   # more units = safer cross-compilation
panic = "unwind"     # unwind so crash is visible in logcat
